[gd_scene load_steps=3 format=3 uid="uid://bg8u8vep831qn"]

[ext_resource type="Script" path="res://Menu/Scripts/menu.gd" id="1_tkqxq"]
[ext_resource type="AudioStream" uid="uid://smwxgopiesli" path="res://Assets/Sounds/sfx-dong1.wav" id="2_pchir"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tkqxq")

[node name="menu_sounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_pchir")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1157.0
offset_bottom = 653.0
color = Color(0.0196078, 0.027451, 0.156863, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 474.0
offset_right = 161.0
offset_bottom = 620.0

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Level Select" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level Select"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Level Select" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
